# sora2kudo-bot

./: .gitignore  EXAMPLES_SYSTEM.md  INSTRUCTION.md  README.md  check_translations.py  env.example  examples.py  healthcheck.py  instruction.html  main.py  pyproject.toml  railpack.toml  railway.json  requirements.txt  sora_client.py  start.sh  translations.py  tribute_subscription.py  Вебхуки _ Tribute.html
.cursor/: rules.json
utils/: __init__.py  keyboards.py
