[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sora2kudo-bot"
version = "1.0.0"
description = "SORA 2 от Neurokudo - Telegram бот для создания видео"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.13.1",
    "asyncpg==0.29.0",
    "openai==1.51.0",
    "yookassa==3.0.0",
    "python-dotenv==1.0.0",
    "aiohttp==3.9.5",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
]

[project.scripts]
start = "app.main:main"
